<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android2.iesb.br.redesocial.CadastroActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvNome"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvSobrenome"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvEmail"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvTelefone"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvSenha"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvConfimaSenha"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"/>
    </LinearLayout>

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_btCadastrar"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
</LinearLayout>
