<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android2.iesb.br.redesocial.CadastroActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvNomeContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvNome"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etNomeContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvSobrenomeContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvSobrenome"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etSobrenomeContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvEmailContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvEmail"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etEmailContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTelefoneContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tvTelefone"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/etTelefoneContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>


    <Button
        android:id="@+id/btCadastrarContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name_btCadastrar"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>




</LinearLayout>
